# sorami

./: .clang-format  .gitignore  CMakeLists.txt
config/: area_config.json
src/: area_code_selector.cpp  area_code_selector.h  input_console.cpp  input_console.h  main.cpp  weather_json_downloader.cpp  weather_json_downloader.h  weather_viewer.cpp  weather_viewer.h
